allow memory growth, to support uploading large files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ add_link_options(-sFORCE_FILESYSTEM=1 -sENVIRONMENT=web -sEXPORT_ES6=1)
 add_executable(webvalidate web-validate.cpp)
 target_link_options(webvalidate PUBLIC "-sFORCE_FILESYSTEM=1 -sENVIRONMENT=web -s EXPORT_ES6=1")
 target_link_options(webvalidate PUBLIC --bind)
+target_link_options(webvalidate PUBLIC -sALLOW_MEMORY_GROWTH=1)
 target_link_options(webvalidate PUBLIC --embed-file=application_defs)
 target_link_options(webvalidate PUBLIC -sEXPORTED_RUNTIME_METHODS=['FS'])
 target_link_libraries(webvalidate hdf5-wasm ${LIBXML2_LIBRARIES} NXV_Static_Library z)
